<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        android:layout_margin="4dp"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="Profile"
            android:padding="10dp"
            android:id="@+id/profile"
            android:clickable="true"/>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="Sort By"
        android:padding="5dp"
        android:layout_marginTop="5dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="2dp"
        android:layout_margin="4dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/radio_setting">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:checked="true"
                android:id="@+id/date"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upvote"
                android:id="@+id/upvote"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/downvote"
                android:id="@+id/downvote"/>
        </RadioGroup>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Order"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="5dp"
        android:padding="5dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="2dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_setting2"
            android:layout_marginLeft="10dp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ascned"
                android:id="@+id/ascend"
                android:checked="true"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/descend"
                android:text="@string/descend"/>

        </RadioGroup>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fafafa"
        android:layout_marginTop="50dp"
        android:text="Apply Changes"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/apply_changes"
        android:width="200dp"
        />
</LinearLayout>