<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView2"
    android:background="#E0E0E0"
    android:fillViewport="true">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<android.support.v7.widget.CardView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="5dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:hint="Title"
        android:id="@+id/complain_title" />

</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_above="@+id/complain_title"
        android:id="@+id/card"
        card_view:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/complain_title"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/radio"
            android:layout_alignParentStart="true">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rb1"
                android:checked="true"
                android:textSize="20dp"
                android:text="@string/rdb1"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:id="@+id/rb2"
                android:text="@string/rdb2"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:id="@+id/rb3"
                android:text="@string/rdb3"/>
        </RadioGroup>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        android:layout_below="@id/card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:minLines="3"
        android:maxLines="10"
        android:padding="10dp"
        android:id="@+id/body" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:padding="20dp"
            android:id="@+id/location"
            android:layout_below="@+id/body"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#fff"
        android:text="Post"
        android:id="@+id/button"
        android:layout_below="@+id/location"
         />
</LinearLayout>
</ScrollView>